# knex

./: .gitignore  .gitmodules  README.md
.github/workflows/: static.yml
data-factory/: README.md  pyproject.toml
data-factory/data/input/: onto_bio_0.1.rdf
data-factory/data/output/: agents.ttl  agents_expanded.ttl
data-factory/src/: converter.py  reasoner-reasonable.py  reasoner.py  scraper.py  sling.py
docs/diagrams/: C4.drawio  data-model.drawio
docs/presentation/: index.html
docs/presentation/media/: detail.webm  search.webm  timeline.webm
qlever/: .gitignore  Qleverfile  README.md  pyproject.toml
qlever/src/: qlever-ui-backend.yaml  qlever-ui-example.yaml
webapp/: .env.example  LICENSE.md  README.md  composer.json  package-lock.json  package.json
webapp/app/: Helpers.php  Metagrid.php  Sparql.php
webapp/resources/css/: app.css
webapp/resources/js/: graph.js  metagrid-widget.js  timeline.js  treechart.js
webapp/resources/views/: base.blade.php  graph.blade.php  index.blade.php  list-footer.blade.php  list.blade.php  person.blade.php  timeline.blade.php
webapp/routes/: web.php
