[project]
authors = [{name = "Giò Diani", email = "mail@gionathandiani.name"}]
dependencies = [ "rdflib>=7.1.1,<8", "dateparser>=1.2.0,<2", "beautifulsoup4>=4.12.3,<5", "requests>=2.32.3,<3", "owlrl>=7.1.2,<8", "duckdb>=1.1.3,<2", "polars[pyarrow]>=1.16.0,<2", "reasonable>=0.2.6,<0.3", "owlready2>=0.47,<0.48"]
description = "Transforms tabular data to a graph."
name = "knex"
requires-python = ">= 3.11"
version = "0.1.0"
repository = "https://gitea.fhgr.ch/dianigionath/knex"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
knex = { path = ".", editable = true }

[host-dependencies]
sling = "~=1.3.1"

[tool.pixi.tasks]
sling_install = "wget -O sling_linux_amd64.tar.gz https://github.com/slingdata-io/sling-cli/releases/download/v1.3.1/sling_linux_amd64.tar.gz && tar -xzvf sling_linux_amd64.tar.gz -C  $PIXI_PROJECT_ROOT/.pixi/envs/default/bin && rm sling_linux_amd64.tar.gz"
