[project]
authors = [{name = "Giò Diani", email = "mail@gionathandiani.name"}]
dependencies = ["qlever>=0.5.8,<0.6"]
description = "Add a short description here"
name = "qlever"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.tasks]
